# autograd_ik

./: CMakeLists.txt  Makefile  main.py  main_vibe.py  main_vibe2.py  main_vibe3.py  main_vibe4.py  main_vibe5.py  pyproject.toml
include/cmink/: chain.h  fk.h  geometry.h  geometry3d.h  limit.h  ops.h  rigbody.h  state.h  utils.h
scripts/: main.py  main_vibe2.py  main_vibe3.py  main_vibe4.py  main_vibe5.py  main_vibe6.py  main_vibe7.py  main_vibe8.py
src/: chain.c  fk.c  geometry3d.c  main.c  ops.c
